# yaooc

./: Makefile.am  Makefile.in  README.md  TODO.md  config.mk  configure  configure.ac  yaooc-config.in
doc/manual/: class.adoc  gpp.adoc  header.adoc  header_prefix.adoc  introduction.adoc  users_manual.adoc  yaoocpp_rules.adoc
doc/tutorial/: class_methods.adoc  class_methods.html  class_table_instance.html  comparison.html  complete_my_string.adoc  constructors.adoc  constructors.html  containers.adoc  containers.html  copy_constructor_assignment.html  custom_class.html  custom_type_info.html  default_ctor_dtor.adoc  exceptions.html  garbage_bag.adoc  hello_world.html  index.html  inheritance.adoc  inheritance.html  introduction.adoc  introduction.html  iostreams.adoc  map.adoc  map.html  memory_layout.adoc  memory_layout.html  new_delete.html  placement_new_delete.adoc  placement_new_delete.html  pointer_bag.html  preface.html  streams.html  tutorial.adoc  tutorial.html  type_info.html  type_info_revisited.html  vector.adoc  vector.html  yaooc.css  yaooc.js  (+2 more)
doc/tutorial/examples/ch06/: my_string_ch06.c  my_string_v1.c
doc/tutorial/examples/ch07/: my_string_v2.c
doc/tutorial/examples/ch08/: my_string_ch08.c  my_string_v3.c
doc/tutorial/examples/ch09/: my_string_v4.c
doc/tutorial/examples/ch10/: my_string_ch10.c  my_string_v5.c
doc/tutorial/examples/ch11/: my_string_ch11.c  my_string_v6.c  my_string_v6.h  my_string_v6.yaooc
doc/tutorial/examples/ch12/: my_string_ch12.c  my_string_v7.c  my_string_v7.h
doc/tutorial/examples/ch13/: my_string_ch13.c  my_string_ch13.h  my_string_ch13.yaooc  my_string_v8.c  my_string_v8.h  my_string_v8.yaooc
doc/tutorial/examples/ch14/: my_string_ch14.c
doc/tutorial/examples/ch15/: my_string_ch15.c  my_string_ch15.h  my_string_ch15.yaooc  my_string_v9.c  my_string_v9.h
doc/tutorial/examples/ch17/: my_string_vector.c  my_string_vector.h
doc/tutorial/examples/class_methods/: my_string.yaooc
doc/tutorial/examples/compare/: my_string.yaooc
doc/tutorial/examples/constructors/: my_string.yaooc
doc/tutorial/examples/copy_ctor_assign/: my_string.yaooc
doc/tutorial/examples/custom_class/: my_string.yaooc
doc/tutorial/examples/default_ctor_dtor/: my_string.yaooc
doc/tutorial/examples/io_stream/: my_string.yaooc
doc/tutorial/examples/lesson_02/: hello_world.c
doc/tutorial/examples/lesson_06/: my_string_ch06.c
doc/tutorial/examples/lesson_07/: my_string_ch07.c
doc/tutorial/examples/lesson_09/: my_string_ch09.c
doc/tutorial/examples/lesson_11/: my_string_ch11.c
doc/tutorial/examples/lesson_13/: my_string_ch13.c  my_string_ch13.h  my_string_ch13.yaooc  (+1 more)
doc/yaooc/tutorial/: class_methods.html  comparing.adoc  constructors.adoc  constructors.html  containers.html  copy_ctor_assign.adoc  custom_class.adoc  custom_class.html  custom_type_info.html  default_constructor_destructor.html  default_ctor_dtor.adoc  exceptions.adoc  exceptions.html  garbage_bag.adoc  garbage_bag.html  hello_world.adoc  hello_world.html  index.html  inheritance.html  iostreams.adoc  map.html  memory_layout.adoc  memory_layout.html  new_delete.adoc  new_delete.html  placement_new_delete.html  pointer_bag.html  streams.html  tutorial.adoc  type_info.html  type_info_revisited.html  vector.html  yaooc.js  yaoocpp.html
include/yaooc/: algorithm.h  array_container.h  array_container.yaooh  base_parser.h  base_parser.yaooh  complex.h  complex.yaooh  container.h  date_time.h  date_time.yaooh  dir.h  exception.h  exception.yaooh  file.h  file.yaooh  fraction.h  fraction.yaooh  fstream.h  fstream.yaooh  garbage_bag.h  garbage_bag.yaooh  index_array_container.h  index_array_container.yaooh  index_container.h  integer.h  integer.yaooh  ipaddress.h  ipaddress.yaooh  json.h  json.yaooh  json_parser.h  json_parser.yaooh  macros.h  map.h  matrix.h  matrix.yaooh  memory.h  memory.yaooh  new.h  object.h  (+48 more)
share/yaooc/templates/: array_container.yaooc  base_parser.yaooc  date_time.yaooc  exception.yaooc  file.yaooc  fstream.yaooc  index_array_container.yaooc  integer.yaooc  ipaddress.yaooc  json.yaooc  json_parser.yaooc  memory.yaooc  object.yaooc  odbc.yaooc  ordered_array_container.yaooc  pod_array.yaooc  pointer_bag.yaooc  real.yaooc  red_black_index_array_container.yaooc  regex.yaooc  sstream.yaooc  stream.yaooc  string.yaooc  thread.yaooc  unique_array_container.yaooc  unique_index_array_container.yaooc  unique_ordered_array_container.yaooc  variant.yaooc
src/: Makefile  algorithm.c  algorithm.yoc  array_container.c  array_container.yaooc  array_container.yoc  base_parser.c  base_parser.yaooc  base_parser.yoc  complex.c  complex.yaooc  complex.yoc  container.c  date_time.c  date_time.yaooc  date_time.yoc  dir.c  exception.c  exception.yaooc  exception.yoc  file.c  file.yaooc  file.yoc  fraction.c  fraction.yaooc  fraction.yoc  fstream.c  fstream.yaooc  fstream.yoc  garbage_bag.c  garbage_bag.yaooc  garbage_bag.yoc  index_array_container.c  index_array_container.yaooc  index_array_container.yoc  index_container.c  integer.c  integer.yaooc  integer.yoc  ipaddress.c  (+74 more)
tests/: Makefile  demo_def.inc  demo_def.yaooc  demo_def.yoc  shape.inc  simple_object.inc  test_algorithm.c  test_array_container.c  test_base_parser.c  test_complex.c  test_container.c  test_date_time.c  test_dir.c  test_exception.c  test_file.c  test_fraction.c  test_garbage_bag.c  test_harness.h  test_index_array_container.c  test_index_container.c  test_ipaddress.c  test_json.c  test_json_parser.c  test_map.c  test_matrix.c  test_memory.c  test_new.c  test_number.c  test_object.c  test_odbc.c  test_ordered_array_container.c  test_ordered_container.c  test_ordered_map.c  test_ordered_set.c  test_pair.c  test_pod_array.c  test_pointer_bag.c  test_queue.c  test_rbtree_index_array_container.c  test_regex.c  (+20 more)
yaoocpp/: Makefile  class_parser.c  class_parser.h  components.c  components.h  components.yaooc  components.yoc  parser.c  parser.h  parser.yaooc  parser.yoc  template_objects.c  template_objects.h  template_objects.yaooc  yaooc_definition_parser.c  yaooc_definition_parser.h  yaoocpp.c
(+62 files in other folders)
